welcome.lessons.welcome.traversal.zigzag.TraversalZigZag.scala.error
ZigZag:21: error: '(' expected but '{' found.
      else if {setPos(L-i,j)}
              ^